--- a/proxy/BUILD.bazel
+++ b/proxy/BUILD.bazel
@@ -1,25 +1,17 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "build.go",
-        "main.go",
-        "proxy.go",
-    ],
+    srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/proxy",
     visibility = ["//visibility:private"],
     deps = [
-        "//lib/config/marshal:go_default_library",
-        "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
+        "//lib/khttp:go_default_library",
         "//lib/logger:go_default_library",
-        "//lib/multierror:go_default_library",
-        "//lib/oauth:go_default_library",
-        "@com_github_kataras_muxie//:go_default_library",
-        "@com_github_kirsle_configdir//:go_default_library",
+        "//proxy/httpp:go_default_library",
+        "//proxy/nasshp:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
-        "@org_golang_x_crypto//acme/autocert:go_default_library",
     ],
 )
 
@@ -27,11 +19,4 @@ go_binary(
     name = "proxy",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["build_test.go"],
-    embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
