--- a/lib/oauth/BUILD.bazel
+++ b/lib/oauth/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/kflags:go_default_library",
+        "//lib/khttp:go_default_library",
         "//lib/khttp/kcookie:go_default_library",
         "//lib/oauth/cookie:go_default_library",
         "//lib/server:go_default_library",
