--- a/proxy/BUILD.bazel
+++ b/proxy/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
         "//lib/kflags/kcobra:go_default_library",
         "//lib/khttp:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/oauth:go_default_library",
+        "//lib/srand:go_default_library",
         "//proxy/httpp:go_default_library",
         "//proxy/nasshp:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
