--- a/proxy/nasshp/BUILD.bazel
+++ b/proxy/nasshp/BUILD.bazel
@@ -6,7 +6,10 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy/nasshp",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kflags:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/oauth:go_default_library",
+        "//lib/token:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
     ],
 )
