--- a/proxy/nasshp/BUILD.bazel
+++ b/proxy/nasshp/BUILD.bazel
@@ -1,8 +1,11 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["nassh.go"],
+    srcs = [
+        "nassh.go",
+        "window.go",
+    ],
     importpath = "github.com/enfabrica/enkit/proxy/nasshp",
     visibility = ["//visibility:public"],
     deps = [
@@ -12,4 +15,11 @@ go_library(
         "//lib/token:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
     ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["window_test.go"],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
