--- a/proxy/nasshp/BUILD.bazel
+++ b/proxy/nasshp/BUILD.bazel
@@ -28,6 +28,7 @@ go_test(
         "//lib/khttp:go_default_library",
         "//lib/khttp/ktest:go_default_library",
         "//lib/khttp/protocol:go_default_library",
+        "//lib/logger:go_default_library",
         "//lib/srand:go_default_library",
         "//lib/token:go_default_library",
         "@com_github_gorilla_websocket//:go_default_library",
