Minor improvements and cleanups in the proxy.
Specifically:
- renamed from proxy to enproxy
- using new transformation abilities to strip the credentials cookie by default.
- timeouts can now be set from the command line.
- CORS and origin checks.
- commented out a test I never finished writing.

--- a/proxy/BUILD.bazel
+++ b/proxy/BUILD.bazel
@@ -20,7 +20,7 @@ go_library(
 )
 
 go_binary(
-    name = "proxy",
+    name = "enproxy",
     embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
