--- a/astore/client/commands/BUILD.bazel
+++ b/astore/client/commands/BUILD.bazel
@@ -15,15 +15,12 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//astore/client/astore:go_default_library",
-        "//astore/client/auth:go_default_library",
         "//astore/rpc:astore-go",
         "//lib/client:go_default_library",
+        "//lib/client/commands:go_default_library",
         "//lib/config:go_default_library",
         "//lib/config/defcon:go_default_library",
-        "//lib/config/identity:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
-        "//lib/kflags/populator:go_default_library",
-        "//lib/logger:go_default_library",
         "//lib/oauth/cookie:go_default_library",
         "@com_github_dustin_go_humanize//:go_default_library",
         "@com_github_fatih_color//:go_default_library",
