--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "//lib/kflags/kcobra:go_default_library",
         "//lib/kflags/populator:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/oauth/cookie:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_pflag//:go_default_library",
     ],
