Various improvements to the nasshp protocol.
Specifically:
- removed a bunch of log statements accidentally left in the code.
- added factory methods to create tunnels from the command line.
- minor improvements in the protocol and window handling. Specifically,
  changed the window implementation so one thread can fill a buffer
  while another is emptying it.

--- a/proxy/ptunnel/BUILD.bazel
+++ b/proxy/ptunnel/BUILD.bazel
@@ -6,6 +6,8 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy/ptunnel",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/kflags:go_default_library",
+        "//lib/khttp/krequest:go_default_library",
         "//lib/khttp/protocol:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/retry:go_default_library",
