--- a/lib/client/BUILD.bazel
+++ b/lib/client/BUILD.bazel
@@ -9,13 +9,20 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/client",
     visibility = ["//visibility:public"],
     deps = [
+        "//astore/client/auth:go_default_library",
+        "//lib/cache:go_default_library",
+        "//lib/client/ccontext:go_default_library",
+        "//lib/config/defcon:go_default_library",
+        "//lib/config/identity:go_default_library",
         "//lib/grpcwebclient:go_default_library",
         "//lib/kflags:go_default_library",
+        "//lib/kflags/provider:go_default_library",
         "//lib/khttp/kclient:go_default_library",
         "//lib/khttp/krequest:go_default_library",
         "//lib/logger:go_default_library",
+        "//lib/logger/klog:go_default_library",
+        "//lib/oauth/cookie:go_default_library",
         "//lib/progress:go_default_library",
-        "@com_github_spf13_pflag//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//metadata:go_default_library",
