--- a/astore/client/auth/BUILD.bazel
+++ b/astore/client/auth/BUILD.bazel
@@ -8,7 +8,7 @@ go_library(
     deps = [
         "//astore/common:go_default_library",
         "//astore/rpc:auth-go",
-        "//lib/client:go_default_library",
+        "//lib/client/ccontext:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
     ],
