--- a/astore/client/commands/BUILD.bazel
+++ b/astore/client/commands/BUILD.bazel
@@ -17,9 +17,9 @@ go_library(
         "//astore/client/astore:go_default_library",
         "//astore/rpc:astore-go",
         "//lib/client:go_default_library",
-        "//lib/client/commands:go_default_library",
         "//lib/config:go_default_library",
         "//lib/config/defcon:go_default_library",
+        "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "@com_github_dustin_go_humanize//:go_default_library",
         "@com_github_fatih_color//:go_default_library",
