--- a/lib/client/commands/BUILD.bazel
+++ b/lib/client/commands/BUILD.bazel
@@ -8,13 +8,8 @@ go_library(
     deps = [
         "//astore/client/auth:go_default_library",
         "//lib/client:go_default_library",
-        "//lib/config/defcon:go_default_library",
         "//lib/config/identity:go_default_library",
-        "//lib/kflags/kcobra:go_default_library",
-        "//lib/kflags/populator:go_default_library",
-        "//lib/logger:go_default_library",
-        "//lib/oauth/cookie:go_default_library",
+        "//lib/kflags:go_default_library",
         "@com_github_spf13_cobra//:go_default_library",
-        "@com_github_spf13_pflag//:go_default_library",
     ],
 )
