--- a/monitor/BUILD.bazel
+++ b/monitor/BUILD.bazel
@@ -6,9 +6,9 @@ go_library(
     importpath = "github.com/enfabrica/enkit/monitor",
     visibility = ["//visibility:private"],
     deps = [
+        "//lib/client:go_default_library",
         "//lib/config/marshal:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
-        "//lib/logger:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
         "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
