--- a/proxy/BUILD.bazel
+++ b/proxy/BUILD.bazel
@@ -7,10 +7,9 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         ":credentials",
-        "//lib/kflags:go_default_library",
+        "//lib/client:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
         "//lib/khttp:go_default_library",
-        "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "//lib/srand:go_default_library",
         "//proxy/httpp:go_default_library",
