--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/proxy/ptunnel/commands",
     visibility = ["//visibility:public"],
     deps = [
-        "//lib/client/commands:go_default_library",
+        "//lib/client:go_default_library",
         "//lib/goroutine:go_default_library",
         "//lib/kflags:go_default_library",
         "//lib/kflags/kcobra:go_default_library",
