--- a/proxy/ptunnel/commands/BUILD.bazel
+++ b/proxy/ptunnel/commands/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["commands.go"],
+    srcs = [
+        "ssh.go",
+        "tunnel.go",
+    ],
     importpath = "github.com/enfabrica/enkit/proxy/ptunnel/commands",
     visibility = ["//visibility:public"],
     deps = [
