proxy/ssh: handle authentication errors.
Before this change:
An authentication error was treated as any other error, and either
resulted in a retry, or some cryptic message in the log/console.

After this change:
Authentication errors are detected correctly, and result in an
helpful error message for the user.

--- a/proxy/ptunnel/BUILD.bazel
+++ b/proxy/ptunnel/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//lib/kflags:go_default_library",
+        "//lib/khttp/kclient:go_default_library",
         "//lib/khttp/krequest:go_default_library",
         "//lib/khttp/protocol:go_default_library",
         "//lib/logger:go_default_library",
