Add better support for standard flag library.
In preparation for the next change:
- allow client default initialization without using the BaseFlags Run method.
- provide a wrapper os a flag.FlagSet can be used with kflags.

This basically allows to really use the libraries and building blocks
without cobra, and simple applications that don't need complex
initialization.

--- a/lib/client/BUILD.bazel
+++ b/lib/client/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//astore/client/auth:go_default_library",
         "//lib/cache:go_default_library",
         "//lib/client/ccontext:go_default_library",
+        "//lib/config:go_default_library",
         "//lib/config/defcon:go_default_library",
         "//lib/config/identity:go_default_library",
         "//lib/grpcwebclient:go_default_library",
