--- a/lib/logger/klog/BUILD.bazel
+++ b/lib/logger/klog/BUILD.bazel
@@ -9,6 +9,12 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/logger/klog",
     visibility = ["//visibility:public"],
     deps = select({
+        "@io_bazel_rules_go//go/platform:aix": [
+            "//lib/kflags:go_default_library",
+            "@com_github_tchap_zapext//zapsyslog:go_default_library",
+            "@org_uber_go_zap//:go_default_library",
+            "@org_uber_go_zap//zapcore:go_default_library",
+        ],
         "@io_bazel_rules_go//go/platform:android": [
             "//lib/kflags:go_default_library",
             "@com_github_tchap_zapext//zapsyslog:go_default_library",
@@ -28,6 +34,24 @@ go_library(
             "@org_uber_go_zap//zapcore:go_default_library",
         ],
         "@io_bazel_rules_go//go/platform:freebsd": [
+            "//lib/kflags:go_default_library",
+            "@com_github_tchap_zapext//zapsyslog:go_default_library",
+            "@org_uber_go_zap//:go_default_library",
+            "@org_uber_go_zap//zapcore:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:illumos": [
+            "//lib/kflags:go_default_library",
+            "@com_github_tchap_zapext//zapsyslog:go_default_library",
+            "@org_uber_go_zap//:go_default_library",
+            "@org_uber_go_zap//zapcore:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:ios": [
+            "//lib/kflags:go_default_library",
+            "@com_github_tchap_zapext//zapsyslog:go_default_library",
+            "@org_uber_go_zap//:go_default_library",
+            "@org_uber_go_zap//zapcore:go_default_library",
+        ],
+        "@io_bazel_rules_go//go/platform:js": [
             "//lib/kflags:go_default_library",
             "@com_github_tchap_zapext//zapsyslog:go_default_library",
             "@org_uber_go_zap//:go_default_library",
