bazel: move bazel scripts and utilities in a sub directory.
This is in preparation for the next few changes, adding scripts to
better support kernel builds.

This change is mostly a noop, just moves files around.
External dependencies may be broken if they are not versioned.

--- a/astore/client/BUILD.bazel
+++ b/astore/client/BUILD.bazel
@@ -48,7 +48,7 @@ go_binary(
     visibility = ["//visibility:public"],
 )
 
-load("//bazel:astore.bzl", "astore_upload")
+load("//bazel/astore:defs.bzl", "astore_upload")
 
 astore_upload(
     name = "deploy",
