style: configure and run buildifier.
Before this change:
bazel files were formatted manually, or with gazelle. gazelle, however,
does not really format pure .bzl files.

This change:
- brings in //buildifier, to format all .bzl files automatically.
- reformats all BUILD.bazel and .bzl files with buildifier.

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -19,3 +19,9 @@ exports_files(
     ],
     visibility = ["//:__subpackages__"],
 )
+
+load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
+
+buildifier(
+    name = "buildifier",
+)
