--- a/kbuild/BUILD.bazel
+++ b/kbuild/BUILD.bazel
@@ -7,12 +7,13 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         ":assets",
+        "//kbuild/common:go_default_library",
+        "//kbuild/kapt:go_default_library",
+        "//lib/config/marshal:go_default_library",
         "//lib/khttp/protocol:go_default_library",
         "//lib/khttp/scheduler:go_default_library",
         "//lib/khttp/workpool:go_default_library",
         "//lib/retry:go_default_library",
-        "@com_github_cybozu_go_aptutil//apt:go_default_library",
-        "@com_github_ulikunitz_xz//:go_default_library",
         "@com_github_xor_gate_ar//:go_default_library",
     ],
 )
