kbuilder: use the new lib/archive library.
Before this change:
kbuild used internal function to unzip and untar files.

After this change:
kbuild is using the functions moved to lib/karchive.

This is mostly a noop, in terms of functionality.
Just shuffling code around.

--- a/kbuild/BUILD.bazel
+++ b/kbuild/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "//kbuild/common:go_default_library",
         "//kbuild/kapt:go_default_library",
         "//lib/config/marshal:go_default_library",
+        "//lib/karchive:go_default_library",
         "//lib/khttp/protocol:go_default_library",
         "//lib/khttp/scheduler:go_default_library",
         "//lib/khttp/workpool:go_default_library",
