lib/config/marshal: rationalize some of the marshalling functions.
In this change:
- added comments and documentation on many of the marshal functions.
- rationalized some of the functions that work on list to work on
  arbitrary lists.
- added a couple functions.

This is adding code useful in following changes + some long due cleanup.

--- a/lib/config/marshal/BUILD.bazel
+++ b/lib/config/marshal/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/config/marshal",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/multierror:go_default_library",
         "@com_github_pelletier_go_toml//:go_default_library",
         "@in_gopkg_yaml_v2//:go_default_library",
     ],
