lib/karchive: set privileges correctly, avoid path escape.
Before this change:
- if 0444 privileges were set or similar, the untar would fail, as the
  file or directory would be created in a non-writable mode.
- if the tar contained a path outside the target directory (eg, ../../../)
  it was just decompressed.

In this change:
- privileges are set last, after all is placed in the correct location.
- paths are cleaned, to ensure no escape from the target directory.
- a bunch of options to control those behaviors.

--- a/lib/karchive/BUILD.bazel
+++ b/lib/karchive/BUILD.bazel
@@ -1,12 +1,23 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
         "decoder.go",
+        "mkdir.go",
         "untar.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/karchive",
     visibility = ["//visibility:public"],
     deps = ["@com_github_ulikunitz_xz//:go_default_library"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = [
+        "mkdir_test.go",
+        "untar_test.go",
+    ],
+    embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
