astore: added an authenticated URL to download artifacts without gRPC.
Additionally: documented some of the existing URLs.

--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "interface.go",
         "note.go",
         "publish.go",
+        "retrieve.go",
     ],
     importpath = "github.com/enfabrica/enkit/astore/server/astore",
     visibility = ["//visibility:public"],
