lib/kflags: support decorated flagsets.
Before this change:
enkit output an annoyingly long help screen. The underlying problem
is that there is no way to mark set of flags differently, or to perform
any action at flag parsing.

In this change:
- add support for decorated flagsets.
- those flagsets can provide callbacks to invoke at execution time.
- add a first flagset, to hide flags, and unhide if --help-all is invoked.

--- a/lib/kflags/kcobra/BUILD.bazel
+++ b/lib/kflags/kcobra/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "cobra.go",
         "defaults.go",
+        "hidden.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/kflags/kcobra",
     visibility = ["//visibility:public"],
