--- a/astore/client/auth/BUILD.bazel
+++ b/astore/client/auth/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//astore/common:go_default_library",
         "//astore/rpc:auth-go",
         "//lib/client/ccontext:go_default_library",
+        "@com_github_pkg_browser//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_x_crypto//nacl/box:go_default_library",
     ],
