initial draft commit

--- a/astore/client/astore/BUILD.bazel
+++ b/astore/client/astore/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "arch.go",
         "astore.go",
+        "delete.go",
         "formatter.go",
         "note.go",
         "publish.go",
