--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,10 +1,18 @@
 name: go lint
 on: push
 jobs:
-  runs-on: ["ubuntu"]
-  - name: lint
+  lint:
+    name: "run golang linter"
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - name: Setup bazel
+        uses: jwlawson/actions-setup-bazel@v1
+        with:
+          bazel-version: '3.5.0'
+      - name: output folder
+        run: -|
+        bazel build
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
