change bazel version

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Setup bazel
         uses: jwlawson/actions-setup-bazel@v1
         with:
-          bazel-version: '3.5.1'
+          bazel-version: 3.5.x
       - name: output folder
         run: |
           bazel build
