whoops, need to change to version

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Setup bazel
         uses: abhinavsingh/setup-bazel@v3
         with:
-          bazel-version: 3.5.1
+          version: 3.5.1
       - name: output folder
         run: |
           bazel build
