--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,8 +10,9 @@ jobs:
         uses: abhinavsingh/setup-bazel@v3
         with:
           version: 3.5.1
-      - name: output folder
+      - name: bazel confirm
         run: |
+          ls
           bazel build
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
