--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -14,9 +14,12 @@ jobs:
         run: |
           which bazel
           bazel --version
+          bazel build //enkit:ci_vendor
         continue-on-error: true
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v2
         with:
           # Required: the version of golangci-lint is required and must be specified without patch version: we always use the latest patch version.
           version: v1.29
+          working-directory: bazel-bin/enkit/ci_vendor/src/github.com/enfabrica/enkit
+
