--- a/astore/client/BUILD.bazel
+++ b/astore/client/BUILD.bazel
@@ -1,10 +1,10 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_path")
 
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/astore/client",
-    visibility = ["//visibility:private"],
+    visibility = ["//visibility:public"],
     deps = [
         "//astore/client/commands:go_default_library",
         "//lib/client:go_default_library",
@@ -58,4 +58,11 @@ astore_upload(
         ":astore-darwin-amd64",
         ":astore-win-amd64",
     ],
+)
+
+go_path(
+    name = "astore_source",
+    deps = ["//astore/client:go_default_library"],
+    visibility = ["//visibility:public"],
+    mode = "copy"
 )
