--- a/astore/server/astore/BUILD.bazel
+++ b/astore/server/astore/BUILD.bazel
@@ -32,9 +32,17 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = ["astore_test.go"],
+    data = glob(["testdata/**"]),
     embed = [":go_default_library"],
     deps = [
         "//astore/client/astore:go_default_library",
+        "//astore/rpc:astore-go",
+        "//lib/client/ccontext:go_default_library",
+        "//lib/logger:go_default_library",
+        "//lib/progress:go_default_library",
+        "//lib/srand:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//test/bufconn:go_default_library",
     ],
 )
