--- a/enkit/BUILD.bazel
+++ b/enkit/BUILD.bazel
@@ -4,7 +4,7 @@ go_library(
     name = "go_default_library",
     srcs = ["main.go"],
     importpath = "github.com/enfabrica/enkit/enkit",
-    visibility = ["//visibility:private"],
+    visibility = ["//visibility:public"],
     deps = [
         "//astore/client/commands:go_default_library",
         "//lib/client:go_default_library",
