bazel/linux: add uml_dir arg to kunit test script
Point uml_dir to the temporary directory bazel provides to the test.

User-mode linux executables place a pid and umid file in the directory
specified by the uml_dir command line argument (default = ~/.uml/). The
current solutions doesn't specify a uml_dir parameter and that causes
the test to fail in our cloudbuild environment, since it has a read-only
home directory.

--- a/bazel/linux/run_um_kunit_tests.template
+++ b/bazel/linux/run_um_kunit_tests.template
@@ -3,6 +3,6 @@
 set -e
 
 MODULE=$(dirname $(realpath {module}))
-TMPOUTPUT=$TEST_UNDECLARED_OUTPUTS_DIR/.output
-{kernel} ubd0={rootfs} hostfs=$MODULE | tee $TMPOUTPUT
+TMPOUTPUT=$TEST_TMPDIR/.output
+{kernel} ubd0={rootfs} hostfs=$MODULE uml_dir=$TEST_TMPDIR | tee $TMPOUTPUT
 {parser} parse < $TMPOUTPUT
