--- a/lib/khttp/ktest/BUILD.bazel
+++ b/lib/khttp/ktest/BUILD.bazel
@@ -2,7 +2,10 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["server.go"],
+    srcs = [
+        "mocks.go",
+        "server.go",
+    ],
     importpath = "github.com/enfabrica/enkit/lib/khttp/ktest",
     visibility = ["//visibility:public"],
 )
