Working on cleaning up and deferring

--- a/lib/khttp/ktest/BUILD.bazel
+++ b/lib/khttp/ktest/BUILD.bazel
@@ -3,9 +3,19 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "credentials.go",
         "mocks.go",
+        "network.go",
         "server.go",
     ],
     importpath = "github.com/enfabrica/enkit/lib/khttp/ktest",
     visibility = ["//visibility:public"],
+    deps = [
+        "//astore/rpc:astore-go",
+        "//astore/server/astore:go_default_library",
+        "//lib/srand:go_default_library",
+        "@com_github_pkg_errors//:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_google_grpc//test/bufconn:go_default_library",
+    ],
 )
