--- a/machinist/server/BUILD.bazel
+++ b/machinist/server/BUILD.bazel
@@ -7,9 +7,17 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist/server",
     visibility = ["//visibility:private"],
     deps = [
-        "//kbuild:assets",
+        ":assets",
+        ":flags",
+        "//lib/kflags:go_default_library",
+        "//lib/kflags/kcobra:go_default_library",
+        "//lib/logger:go_default_library",
         "//lib/oauth:go_default_library",
         "//lib/server:go_default_library",
+        "//machinist/rpc:machinist-go",
+        "//machinist/server/controller:go_default_library",
+        "@com_github_spf13_cobra//:go_default_library",
+        "@org_golang_google_grpc//:go_default_library",
     ],
 )
 
