--- a/machinist/rpc/BUILD.bazel
+++ b/machinist/rpc/BUILD.bazel
@@ -1,8 +1,6 @@
+load("@rules_proto//proto:defs.bzl", "proto_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
-
-# Gazelle seems to not detect my existing proto_library rules, and
-# create new ones with names I don't like. So here you go, gazelle!
-# gazelle:proto disable
 
 proto_library(
     name = "machinist_proto",
@@ -11,25 +9,19 @@ proto_library(
         "machinist.proto",
     ],
     visibility = ["//visibility:public"],
-    deps = [
-    ],
 )
 
-load("@rules_proto//proto:defs.bzl", "proto_library")
-
 go_proto_library(
-    name = "machinist-proto-lib",
+    name = "machinist_go_proto",
     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
-    importpath = "github.com/enfabrica/enkit/machinist/rpc/machinist",
+    importpath = "github.com/enfabrica/enkit/machinist/rpc",
     proto = ":machinist_proto",
     visibility = ["//visibility:public"],
 )
 
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
-
 go_library(
-    name = "machinist-go",
-    embed = [":machinist-proto-lib"],
-    importpath = "github.com/enfabrica/enkit/machinist/rpc/machinist",
+    name = "go_default_library",
+    embed = [":machinist_go_proto"],
+    importpath = "github.com/enfabrica/enkit/machinist/rpc",
     visibility = ["//visibility:public"],
 )
