implemented timeout and changes for PR

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     },
     "scripts": {
         "build": "bazel build //...",
-        "test": "bazel ktest //..."
+        "test": "bazel test //..."
     },
     "dependencies": {
         "@bazel/labs": "^1.6.1",
