--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -11,5 +11,8 @@ go_test(
     name = "go_default_test",
     srcs = ["certs_test.go"],
     embed = [":go_default_library"],
-    deps = ["@org_golang_x_crypto//ssh:go_default_library"],
+    deps = [
+        "@com_github_stretchr_testify//assert:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
+    ],
 )
