--- a/.bazelrc
+++ b/.bazelrc
@@ -6,7 +6,7 @@
 
 # Cache action outputs on disk so they persist across output_base and bazel shutdown (eg. changing branches)
 build --disk_cache=~/.cache/bazel-disk-cache
-
+build --workspace_status_command "/bin/bash bazel/workspace_status.sh"
 # Bazel will create symlinks from the workspace directory to output artifacts.
 # Build results will be placed in a directory called "dist/bin"
 # Other directories will be created like "dist/testlogs"
