--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
     importpath = "github.com/enfabrica/enkit/machinist",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/client/ccontext:go_default_library",
+        "//lib/kcerts:go_default_library",
         "//lib/token:go_default_library",
         "//machinist/rpc:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
@@ -18,12 +20,16 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["server_test.go"],
+    srcs = [
+        "machinist_e2e_test.go",
+        "server_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "//lib/kcerts:go_default_library",
         "//lib/khttp/ktest:go_default_library",
         "//lib/srand:go_default_library",
         "//lib/token:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
