--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -11,9 +11,9 @@ go_library(
     deps = [
         "//lib/client/ccontext:go_default_library",
         "//lib/kcerts:go_default_library",
-        "//lib/khttp/ktest:go_default_library",
         "//lib/token:go_default_library",
         "//machinist/rpc:machinist-go",
+        "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//credentials:go_default_library",
     ],
