--- a/astore/BUILD.bazel
+++ b/astore/BUILD.bazel
@@ -6,15 +6,18 @@ go_test(
         "e2e_test.go",
         "server_test.go",
     ],
+    local = True,
+    data = glob(["testdata/**"]),
     deps = [
+        "//astore/atesting:go_default_library",
         "//astore/client/astore:go_default_library",
         "//astore/rpc:astore-go",
         "//astore/server/astore:go_default_library",
         "//lib/client/ccontext:go_default_library",
-        "//lib/khttp/ktest:go_default_library",
         "//lib/logger:go_default_library",
         "//lib/progress:go_default_library",
         "//lib/srand:go_default_library",
+        "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//test/bufconn:go_default_library",
     ],
