--- a/machinist/BUILD.bazel
+++ b/machinist/BUILD.bazel
@@ -2,20 +2,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = [
-        "invitations.go",
-        "node.go",
-        "server.go",
-    ],
+    srcs = ["invitations.go"],
     importpath = "github.com/enfabrica/enkit/machinist",
     visibility = ["//visibility:public"],
-    deps = [
-        "//lib/kcerts:go_default_library",
-        "//lib/token:go_default_library",
-        "//machinist/rpc:machinist-go",
-        "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc//credentials:go_default_library",
-    ],
 )
 
 go_test(
@@ -23,9 +12,12 @@ go_test(
     srcs = ["machinist_e2e_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//astore/rpc:auth-go",
         "//lib/kcerts:go_default_library",
         "//lib/srand:go_default_library",
         "//lib/token:go_default_library",
+        "//machinist/mnode:go_default_library",
+        "//machinist/mserver:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
     ],
 )
