--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -1,23 +1,25 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_go//extras:embed_data.bzl", "go_embed_data")
 
 go_library(
     name = "go_default_library",
-    srcs = ["main.go"],
-    importpath = "github.com/enfabrica/enkit/machinist/server",
-    visibility = ["//visibility:private"],
+    srcs = ["server.go"],
+    importpath = "github.com/enfabrica/enkit/machinist/mserver",
+    visibility = ["//visibility:public"],
     deps = [
-        ":assets",
-        ":flags",
-        "//lib/kflags:go_default_library",
-        "//lib/kflags/kcobra:go_default_library",
-        "//lib/logger:go_default_library",
+        "//astore/common:go_default_library",
+        "//astore/rpc:auth-go",
+        "//astore/server/auth:go_default_library",
+        "//lib/kcerts:go_default_library",
+        "//lib/khttp/kcookie:go_default_library",
         "//lib/oauth:go_default_library",
-        "//lib/server:go_default_library",
+        "//lib/oauth/ogithub:go_default_library",
+        "//lib/srand:go_default_library",
+        "//lib/token:go_default_library",
+        "//machinist:go_default_library",
         "//machinist/rpc:machinist-go",
-        "//machinist/server/controller:go_default_library",
-        "@com_github_spf13_cobra//:go_default_library",
         "@org_golang_google_grpc//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
     ],
 )
 
@@ -50,11 +52,5 @@ go_library(
     name = "assets",
     srcs = [":embedded-assets"],
     importpath = "github.com/enfabrica/enkit/machinist/server/assets",
-    visibility = ["//visibility:public"],
-)
-
-go_binary(
-    name = "server",
-    embed = [":go_default_library"],
     visibility = ["//visibility:public"],
 )
