--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -8,7 +8,7 @@ gazelle(
 )
 
 exports_files(
-    ["tsconfig.json"],
+    ["tsconfig.json", "package.json", "yarn.lock"],
     visibility = ["//:__subpackages__"],
 )
 
