--- a/package.json
+++ b/package.json
@@ -1,51 +1,76 @@
 {
-    "name": "scratch",
-    "version": "0.1.0",
-    "private": true,
-    "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/plugin-external-helpers": "^7.8.3",
-        "@babel/preset-env": "^7.10.3",
-        "@babel/preset-react": "^7.9.4",
-        "@bazel/bazelisk": "^1.4.0",
-        "@bazel/buildifier": "latest",
-        "@bazel/ibazel": "^0.13.1",
-        "@bazel/rollup": "^1.7.0",
-        "@bazel/typescript": "^1.7.0",
-        "@rollup/plugin-babel": "^5.0.0",
-        "@rollup/plugin-commonjs": "^11.1.0",
-        "@rollup/plugin-node-resolve": "^7.1.3",
-        "@rollup/plugin-replace": "^2.3.2",
-        "@types/react-dom": "^16.9.8",
-        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-        "grpc-web": "^1.1.0-rc.1",
-        "rollup": "^2.7.6",
-        "rollup-plugin-analyzer": "^3.2.3",
-        "rollup-plugin-terser": "^5.3.0",
-        "typescript": "^3.9.5"
-    },
-    "scripts": {
-        "build": "bazel build //...",
-        "test": "bazel test //..."
-    },
-    "dependencies": {
-        "@bazel/labs": "^1.6.1",
-        "@material-ui/core": "^4.9.13",
-        "@material-ui/icons": "^4.9.1",
-        "@material-ui/lab": "^4.0.0-alpha.56",
-        "@reach/router": "^1.3.3",
-        "@types/google-protobuf": "^3.7.2",
-        "@types/libsodium-wrappers": "^0.7.7",
-        "@types/react-redux": "^7.1.9",
-        "google-protobuf": "^3.12.1",
-        "grpc": "^1.24.2",
-        "libsodium-wrappers": "^0.7.6",
-        "material-design-lite": "^1.3.0",
-        "material-icons": "^0.3.1",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
-        "react-redux": "^7.2.0",
-        "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
-    }
+  "name": "scratch",
+  "version": "0.1.0",
+  "private": true,
+  "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-external-helpers": "^7.8.3",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.9.4",
+    "@bazel/bazelisk": "^1.4.0",
+    "@bazel/buildifier": "latest",
+    "@bazel/ibazel": "^0.13.1",
+    "@bazel/rollup": "^1.7.0",
+    "@bazel/typescript": "^1.7.0",
+    "@rollup/plugin-babel": "^5.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@types/react-dom": "^16.9.8",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "grpc-web": "^1.1.0-rc.1",
+    "rollup": "^2.7.6",
+    "rollup-plugin-analyzer": "^3.2.3",
+    "rollup-plugin-terser": "^5.3.0",
+    "typescript": "^3.9.5"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@bazel/labs": "^1.6.1",
+    "@material-ui/core": "^4.9.13",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reach/router": "^1.3.3",
+    "@types/google-protobuf": "^3.7.2",
+    "@types/libsodium-wrappers": "^0.7.7",
+    "@types/react-redux": "^7.1.9",
+    "google-protobuf": "^3.12.1",
+    "grpc": "^1.24.2",
+    "libsodium-wrappers": "^0.7.6",
+    "material-design-lite": "^1.3.0",
+    "material-icons": "^0.3.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "web-vitals": "^1.0.1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
