--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -2,14 +2,24 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["certs.go"],
+    srcs = [
+        "certs.go",
+        "ssh.go",
+    ],
     importpath = "github.com/enfabrica/enkit/lib/kcerts",
     visibility = ["//visibility:public"],
+    deps = [
+        "@com_github_mitchellh_go_homedir//:go_default_library",
+        "@org_golang_x_crypto//ssh:go_default_library",
+    ],
 )
 
 go_test(
     name = "go_default_test",
-    srcs = ["certs_test.go"],
+    srcs = [
+        "certs_test.go",
+        "ssh_test.go",
+    ],
     embed = [":go_default_library"],
     deps = [
         "@com_github_stretchr_testify//assert:go_default_library",
