--- a/lib/knetwork/BUILD.bazel
+++ b/lib/knetwork/BUILD.bazel
@@ -1,8 +1,18 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["ports.go"],
+    srcs = [
+        "dns.go",
+        "ports.go",
+    ],
     importpath = "github.com/enfabrica/enkit/lib/knetwork",
     visibility = ["//visibility:public"],
+    deps = ["@com_github_miekg_dns//:go_default_library"],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["dns_test.go"],
+    embed = [":go_default_library"],
 )
