--- a/lib/knetwork/BUILD.bazel
+++ b/lib/knetwork/BUILD.bazel
@@ -8,11 +8,15 @@ go_library(
     ],
     importpath = "github.com/enfabrica/enkit/lib/knetwork",
     visibility = ["//visibility:public"],
-    deps = ["@com_github_miekg_dns//:go_default_library"],
+    deps = [
+        "//lib/logger/klog:go_default_library",
+        "@com_github_miekg_dns//:go_default_library",
+    ],
 )
 
 go_test(
     name = "go_default_test",
     srcs = ["dns_test.go"],
     embed = [":go_default_library"],
+    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
 )
