unleaky ssh agent with cache validation and env stopping

--- a/lib/kcerts/BUILD.bazel
+++ b/lib/kcerts/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/enfabrica/enkit/lib/kcerts",
     visibility = ["//visibility:public"],
     deps = [
+        "//lib/cache:go_default_library",
         "@com_github_mitchellh_go_homedir//:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
@@ -22,6 +23,7 @@ go_test(
     ],
     embed = [":go_default_library"],
     deps = [
+        "//lib/cache:go_default_library",
         "@com_github_stretchr_testify//assert:go_default_library",
         "@org_golang_x_crypto//ssh:go_default_library",
     ],
