--- a/machinist/mserver/BUILD.bazel
+++ b/machinist/mserver/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "controller.go",
         "factory.go",
         "flags.go",
+        "models.go",
         "mserver.go",
     ],
     importpath = "github.com/enfabrica/enkit/machinist/mserver",
